--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,15 @@ ul li{
 .mainTitle{
     text-align: center;
 }
+
+.recipeHeaders{
+    text-decoration: underline;
+    
+}
+
+.ingredientList{
+    text-align: left;
+    margin:0;
+    padding-top: 0;
+    padding-bottom: 0;
+}
