--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body,
 * {
 	font-family: "Hack NF";
     padding: 0;
+    text-align: center;
 }
 
 a:hover{
@@ -50,4 +51,43 @@ ul li{
     margin:0;
     padding-top: 0;
     padding-bottom: 0;
+}
+button, input{
+    width: 25%;
+    min-height: 20px;
+    padding: 15px 40px;
+    background-color: white;
+    border-style: solid;
+    border-color:black;
+    border-width: 2px;
+    border-radius: 5px;
+    cursor: pointer;
+    color: black;
+    font-weight: bold;
+    margin: 10px;
+}
+button:hover, .btnSubmit:hover{
+    transition: 0.5s;
+    color:white;
+    background-color: black;
+    
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.textInput{
+    cursor: text;
+    text-align: center;
+    max-width: 25%;
+    margin:15px
+    
+}
+
+#UserInfos{
+    display: none;
 }
