--- a/Sites/guessingNumber/styles.css
+++ b/Sites/guessingNumber/styles.css
@@ -2,6 +2,7 @@ body,
 * {
 	font-family: "Hack NF";
 	text-align: center;
+	display: border-box;
 }
 
 .everything {
@@ -10,7 +11,6 @@ body,
 	justify-content: center;
 	height: 90vh;
 	background-image: url(./BackgroundPatternZigZag.jpg);
-
 	filter: greyscale(100%);
 }
 
